--- a/Hotels Coding Test/Base.lproj/Main.storyboard
+++ b/Hotels Coding Test/Base.lproj/Main.storyboard
@@ -1,9 +1,73 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
     </dependencies>
     <scenes>
+        <!--Sort View Controller-->
+        <scene sceneID="Miq-x6-hr2">
+            <objects>
+                <viewController id="nAE-sg-Bq3" customClass="SortViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="DyC-rA-56q"/>
+                        <viewControllerLayoutGuide type="bottom" id="ECR-Pl-L25"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="7Oa-g8-lgf">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="9Fd-jX-dPf">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="z0D-Iu-Vtz">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="z0D-Iu-Vtz" id="Pw6-W9-mFt">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="nAE-sg-Bq3" id="7tR-1w-QBk"/>
+                                    <outlet property="delegate" destination="nAE-sg-Bq3" id="wKU-JY-Efw"/>
+                                </connections>
+                            </tableView>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uxc-JS-9Ma">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="YNF-Gs-Ci7"/>
+                                </constraints>
+                                <items>
+                                    <navigationItem title="Sort Hotels" id="6Ph-hi-0fv">
+                                        <barButtonItem key="rightBarButtonItem" title="Item" style="done" systemItem="done" id="DuB-SQ-l7f">
+                                            <connections>
+                                                <action selector="doneButtonAction:" destination="nAE-sg-Bq3" id="rKJ-eq-3RQ"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                                <connections>
+                                    <outlet property="delegate" destination="nAE-sg-Bq3" id="xyS-fa-S2a"/>
+                                </connections>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="9Fd-jX-dPf" secondAttribute="trailing" id="J2U-zB-0Li"/>
+                            <constraint firstItem="9Fd-jX-dPf" firstAttribute="top" secondItem="uxc-JS-9Ma" secondAttribute="bottom" id="QaR-Ay-DeF"/>
+                            <constraint firstAttribute="bottom" secondItem="9Fd-jX-dPf" secondAttribute="bottom" id="Yh0-aV-NAI"/>
+                            <constraint firstItem="uxc-JS-9Ma" firstAttribute="top" secondItem="7Oa-g8-lgf" secondAttribute="top" constant="20" id="iIu-aF-HCl"/>
+                            <constraint firstItem="uxc-JS-9Ma" firstAttribute="leading" secondItem="7Oa-g8-lgf" secondAttribute="leading" id="kcy-9y-Yv9"/>
+                            <constraint firstAttribute="trailing" secondItem="uxc-JS-9Ma" secondAttribute="trailing" id="q2E-tH-czD"/>
+                            <constraint firstItem="9Fd-jX-dPf" firstAttribute="leading" secondItem="7Oa-g8-lgf" secondAttribute="leading" id="rdy-wG-bcX"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oTj-Wz-LgN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1562" y="-1083"/>
+        </scene>
         <!--List View Controller-->
         <scene sceneID="hNz-n2-bh7">
             <objects>
@@ -43,7 +107,12 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Hotels" id="1hE-Xv-8vY">
-                        <barButtonItem key="rightBarButtonItem" title="Sort" id="thi-us-j2l"/>
+                        <barButtonItem key="rightBarButtonItem" title="Sort" id="thi-us-j2l">
+                            <connections>
+                                <action selector="sortButtonAction:" destination="9pv-A4-QxB" id="ozH-qK-leX"/>
+                                <segue destination="nAE-sg-Bq3" kind="presentation" id="CoI-5I-vDg"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
