--- a/Hotels Coding Test/Base.lproj/Main.storyboard
+++ b/Hotels Coding Test/Base.lproj/Main.storyboard
@@ -83,7 +83,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Nif-iJ-15c">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Nif-iJ-15c">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -133,9 +133,13 @@
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="loP-Gj-YxX">
+                                                    <rect key="frame" x="60" y="45" width="20" height="20"/>
+                                                </activityIndicatorView>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="vvU-k7-Z9Y" firstAttribute="leading" secondItem="Bpg-qc-IP0" secondAttribute="leading" constant="10" id="8PP-On-y27"/>
+                                                <constraint firstItem="vvU-k7-Z9Y" firstAttribute="leading" secondItem="loP-Gj-YxX" secondAttribute="trailing" constant="-70" id="CgF-q8-FwW"/>
                                                 <constraint firstAttribute="trailing" secondItem="iyF-gA-kXN" secondAttribute="trailing" constant="8" id="GEV-dV-Fdr"/>
                                                 <constraint firstItem="iyF-gA-kXN" firstAttribute="top" secondItem="d7b-Qc-7ms" secondAttribute="bottom" constant="-2" id="Juu-Zw-Mqr"/>
                                                 <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="5ym-Mz-cqC" secondAttribute="bottom" constant="10" id="KAe-vG-r87"/>
@@ -148,6 +152,7 @@
                                                 <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="vvU-k7-Z9Y" secondAttribute="bottom" constant="9" id="fuX-N7-O7H"/>
                                                 <constraint firstItem="m8y-Rs-IYx" firstAttribute="leading" secondItem="vvU-k7-Z9Y" secondAttribute="trailing" constant="8" id="gUS-36-hTD"/>
                                                 <constraint firstItem="d7b-Qc-7ms" firstAttribute="top" secondItem="m8y-Rs-IYx" secondAttribute="bottom" constant="-1" id="gv5-0g-h44"/>
+                                                <constraint firstItem="vvU-k7-Z9Y" firstAttribute="top" secondItem="loP-Gj-YxX" secondAttribute="bottom" constant="-55" id="krO-wL-fjT"/>
                                                 <constraint firstItem="m8y-Rs-IYx" firstAttribute="top" secondItem="Bpg-qc-IP0" secondAttribute="top" constant="10" id="lah-Pq-KRS"/>
                                                 <constraint firstAttribute="trailing" secondItem="d7b-Qc-7ms" secondAttribute="trailing" constant="8" id="nm5-yN-fu8"/>
                                                 <constraint firstItem="d7b-Qc-7ms" firstAttribute="leading" secondItem="vvU-k7-Z9Y" secondAttribute="trailing" constant="8" id="zGw-Fc-aKh"/>
@@ -159,6 +164,7 @@
                                             <outlet property="priceLabel" destination="d7b-Qc-7ms" id="5Js-pB-qxt"/>
                                             <outlet property="starsLabel" destination="5ym-Mz-cqC" id="Alj-3T-Sg3"/>
                                             <outlet property="thumbnailImageView" destination="vvU-k7-Z9Y" id="IRv-z7-WkN"/>
+                                            <outlet property="thumbnailLoadIndicator" destination="loP-Gj-YxX" id="LAh-Ec-BaX"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
