--- a/Hotels Coding Test/Base.lproj/Main.storyboard
+++ b/Hotels Coding Test/Base.lproj/Main.storyboard
@@ -212,6 +212,9 @@
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="0k2-1b-3pj">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <connections>
+                                    <outlet property="delegate" destination="8rJ-Kc-sve" id="CeC-Jw-BnY"/>
+                                </connections>
                             </mapView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
